--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <!-- for icon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Document</title>
+    <title>Tanvir Ahmed</title>
+    <link rel="icon" href="atTop.png">
 </head>
 <body>
     <header class="header">
